# gemini-process-server

./: TODO.md  docker-compose.yaml
metadata_extraction_worker/: Dockerfile  pyproject.toml
metadata_extraction_worker/src/metadata_extraction_worker/: tasks.py
metadata_extraction_worker/src/metadata_extraction_worker/core/: config.py
metadata_extraction_worker/src/metadata_extraction_worker/services/: minio_client.py  mongodb_client.py
pdf-upload-service/: Dockerfile  pyproject.toml
pdf-upload-service/src/pdf_upload_service/: main.py
pdf-upload-service/src/pdf_upload_service/core/: config.py
pdf-upload-service/src/pdf_upload_service/routes/: post_pdf.py
pdf-upload-service/src/pdf_upload_service/services/: celery_tasks.py  minio_client.py
